docs/api/qiskit-ibm-runtime/0.18/qiskit_ibm_runtime.fake_provider.FakeProvider.mdx
---
title: FakeProvider (v0.18)
description: API reference for qiskit_ibm_runtime.fake_provider.FakeProvider in qiskit-ibm-runtime v0.18
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.fake_provider.FakeProvider
---

# FakeProvider

<Class id="qiskit_ibm_runtime.fake_provider.FakeProvider" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibm-runtime/tree/stable/0.18/qiskit_ibm_runtime/fake_provider/fake_provider.py" signature="FakeProvider" modifiers="class">
  Fake provider containing fake V1 backends.

  Only filtering backends by name is implemented. This class contains all fake V1 backends available in the [`qiskit_ibm_runtime.fake_provider`](fake_provider#module-qiskit_ibm_runtime.fake_provider "qiskit_ibm_runtime.fake_provider").

  ## Attributes

  ### version

  <Attribute id="qiskit_ibm_runtime.fake_provider.FakeProvider.version" attributeValue="1" />

  ## Methods

  ### backends

  <Function id="qiskit_ibm_runtime.fake_provider.FakeProvider.backends" signature="backends(name=None, **kwargs)">
    Return a list of backends matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    **a list of Backends that match the filtering**

    criteria.

    **Return type**

    list\[Backend]
  </Function>

  ### get\_backend

  <Function id="qiskit_ibm_runtime.fake_provider.FakeProvider.get_backend" signature="get_backend(name=None, **kwargs)">
    Return a single backend matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    a backend matching the filtering.

    **Return type**

    Backend

    **Raises**

    **QiskitBackendNotFoundError** – if no backend could be found or more than one backend matches the filtering criteria.
  </Function>
</Class>

